Optimize route button/algorithm + dark mode fix (#38)
* created basic button template and reconfigured api requests

* fixed backend logic

* added loading state for opt-route

* changed to comparing all permutations

* changed width of search-box

* reorganized algorithms into new file

* added try catch blocks on api calls

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,13 +8,14 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+/* dark mode */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -104,9 +105,9 @@ body {
 .search-box-container {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   z-index: 1;
-  width: 100%;
+  width: 30%;
   padding: 1rem;
   display: flex;
   flex-direction: column; 
@@ -136,4 +137,72 @@ body {
   padding: 0.4rem;
   margin-right: 0.5rem;
   color: black;
+}
+
+.opt-route-button-container {
+  position: absolute;
+  bottom: 8rem;
+  right: 0.5rem;
+}
+
+.opt-route-button {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.opt-route-button:hover + .opt-route-text {
+  display: inline-block;
+}
+
+.opt-route-button:hover {
+  /* opacity: 0.8; */
+  background: rgb(166, 189, 197);
+}
+
+.opt-route-text {
+  position: absolute; /* Position the text absolutely */
+  right: 60px; /* Adjust the distance from the button as needed */
+  top: 10px;
+  display: none;
+  white-space: nowrap;
+}
+
+.rec-button-container {
+  position: absolute;
+  bottom: 12rem;
+  right: 0.5rem;
+}
+
+.rec-button {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rec-button:hover + .rec-text {
+  display: inline-block;
+}
+
+.rec-button:hover {
+  /* opacity: 0.8; */
+  background: rgb(166, 189, 197);
+}
+
+.rec-text {
+  position: absolute; /* Position the text absolutely */
+  right: 60px; /* Adjust the distance from the button as needed */
+  top: 10px;
+  display: none;
+  white-space: nowrap;
 }
